RESOLVED FIXED213221
REGRESSION (r262643): DumpRenderTree at com.apple.WebCore: WebCore::Document::prepareCanvasesForDisplayIfNeeded
https://bugs.webkit.org/show_bug.cgi?id=213221
Summary REGRESSION (r262643): DumpRenderTree at com.apple.WebCore: WebCore::Document:...
Dean Jackson
Reported 2020-06-15 16:10:24 PDT
REGRESSION (r262643): DumpRenderTree at com.apple.WebCore: WebCore::Document::prepareCanvasesForDisplayIfNeeded
Attachments
Patch (15.52 KB, patch)
2020-06-15 16:22 PDT, Dean Jackson
no flags
Patch (7.50 KB, patch)
2020-06-16 15:34 PDT, Dean Jackson
simon.fraser: review+
Dean Jackson
Comment 1 2020-06-15 16:11:19 PDT
Dean Jackson
Comment 2 2020-06-15 16:22:07 PDT
Simon Fraser (smfr)
Comment 3 2020-06-15 16:29:26 PDT
Comment on attachment 401954 [details] Patch I think you should split this into two patches.
Dean Jackson
Comment 4 2020-06-16 15:34:02 PDT
Simon Fraser (smfr)
Comment 5 2020-06-16 15:48:31 PDT
Comment on attachment 402049 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=402049&action=review > Source/WebCore/dom/Document.h:1601 > + void clearCanvasPreparation(HTMLCanvasElement*); I don't like how we have multiple ways we do this. There's generic Element::didMove... stuff, there's HTMLMediaElement::unregisterWithDocument(), Document::unregisterForCaptionPreferencesChangedCallbacks(), Document::unregisterArticleElement() etc. We should add one overridable hook for elements that need to do custom document removal. Maybe not in this patch.
Dean Jackson
Comment 6 2020-06-16 17:49:07 PDT
Note You need to log in before you can comment on or make changes to this bug.